[gd_scene load_steps=4 format=3 uid="uid://bdyvforlk3gff"]

[ext_resource type="Script" path="res://src/node/gradient_editor.gd" id="1_lkn08"]
[ext_resource type="Shader" path="res://shaders/linear_gradient_checker_alpha.gdshader" id="2_octm4"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pppqu"]
shader = ExtResource("2_octm4")
shader_parameter/document_size = Vector2(240, 40)
shader_parameter/document_scale = 1.0

[node name="GradientEditor" type="VBoxContainer"]
offset_right = 350.0
offset_bottom = 650.0
script = ExtResource("1_lkn08")

[node name="Panel" type="Control" parent="."]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="Panel"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_pppqu")
layout_mode = 0
offset_left = 12.0
offset_top = 12.0
offset_right = 302.0
offset_bottom = 52.0

[node name="PlusButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 310.0
offset_top = 12.0
offset_right = 350.0
offset_bottom = 32.0

[node name="Label" type="Label" parent="Panel/PlusButton"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "+"
horizontal_alignment = 1

[node name="MinusButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 310.0
offset_top = 32.0
offset_right = 350.0
offset_bottom = 52.0

[node name="Label" type="Label" parent="Panel/MinusButton"]
layout_mode = 0
offset_top = -8.0
offset_right = 40.0
offset_bottom = 26.0
theme_override_font_sizes/font_size = 24
text = "-"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorPicker" type="ColorPicker" parent="."]
unique_name_in_owner = true
layout_mode = 2

[connection signal="pressed" from="Panel/PlusButton" to="." method="_on_plus_button_pressed"]
[connection signal="pressed" from="Panel/MinusButton" to="." method="_on_minus_button_pressed"]
[connection signal="color_changed" from="ColorPicker" to="." method="_on_color_picker_color_changed"]
